syntax = "proto3";

package proto;

option go_package = "/proto";

message User {
    string id = 1;
    string name = 2;
}

message Message {
    string id = 1;
    string orgName = 2;
    string content = 3;
}

message Connect {
    User user = 1;
    bool active = 2;
}

message Close { }

service Broadcast {
    rpc CreateConnection(Connect) returns (stream Message);
    rpc BroadcastMessage(Message) returns (Close);
}